Fixing yellp-img urls

--- a/templates/views/index.html
+++ b/templates/views/index.html
@@ -25,7 +25,7 @@
           <div class="spacer col-md-2 col-xs-6">
           </div>
           <div class="yellp-img col-md-2 col-xs-6">
-            <img src="/public/uploads/images/{{index[i].image.filename}}" />
+            <img src="/uploads/images/{{index[i].image.filename}}" />
           </div>
         {% endfor %}
         {% endif %}
