--- a/templates/views/menu.html
+++ b/templates/views/menu.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <div id="menu" class="container">
-    	<div class="menu-head-1 spacer col-sm-2"></div>
-		<h1 class="page-title col-sm-2">Cocktails</h1>
-		<div class="menu-head-2 spacer col-md-2 col-sm-6"></div>
+    	<div class="menu-head-1 spacer col-md-2"></div>
+		<h1 class="page-title col-md-2">Cocktails</h1>
+		<div class="menu-head-2 spacer col-md-2"></div>
         {% if not menu %}
         <h2>We ran out…</h2> 
         {% else %}
