--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -26,16 +26,22 @@ body {
 }
 
 h1, .h1 {
-	letter-spacing: -.1em;
+	letter-spacing: -.0825em;
 }
 
 h2, .h2, h3, .h3 {
 	margin: 25px 0 22.5px;
-	letter-spacing: -.0875em;
+	letter-spacing: -.0775em;
 }
 
 sub, sup {
 	font-size: 67.5%;
+}
+
+cite {
+	font-family: 'ElektrixLight';
+	font-size: 1.25em;
+	font-weight: normal;
 }
 
 a {
@@ -55,10 +61,6 @@ a {
 
 .navbar-nav {
 	min-height: 110px;
-}
-
-.navbar-nav li {
-	width: 110%;
 }
 
 .navbar-nav > li > a {
@@ -105,7 +107,26 @@ a {
 	color: $magenta;
 	padding: 30px 15px;
 	text-align: center;
-	@include border(12px, $green, $magenta);
+	@include border(12px, $magenta, $magenta);
+	a {
+		background-color: $green;
+		box-shadow:
+		    inset 0 -0.175em $green,
+		    inset 0 -0.2em $magenta;
+		padding: 0 3.75px;
+		text-decoration: none;
+		&:hover {
+			background-color: $magenta;
+			box-shadow:
+		    inset 0 -0.175em $magenta,
+		    inset 0 -0.2em $cyan;
+		}
+	}
+}
+
+// Marquee3k
+.marquee3k {
+	overflow: hidden;
 }
 
 // Header
@@ -115,12 +136,11 @@ a {
 
 #logo {
 	display: block;
-	min-height: 330px;
 }
 
 #ppguy {
 	background-image: url('/images/pon-guy-bg.png');
-	background-size: 101%;
+	background-size: 100.25%;
 	background-origin: content-box;
 	background-position: center;
 	padding-left: 0;
@@ -137,15 +157,16 @@ a {
 	padding-right: 0;
 	z-index: 3;
 	li {
-		background-color: #111;
-		color: #fff;
+		background-color: #fff;
+		color: #111;
+		font-weight: bold;
 		text-align: center;
 		&:nth-child(even) {
-			background-color: #fff;
-			color: #111;
-			font-weight: bold;
+			background-color: #111;
+			color: #fff;
 		} a {
 			min-height: 110px;
+			padding-top: 42.5px;
 		}
 	}
 }
@@ -170,26 +191,38 @@ a {
 
 // Footer
 #footer {
-	background-color: #111;
-	color: #fff;
+	background-color: #fff;
+	color: #111;
+	font-weight: bold;
 	margin: 0;
 	overflow: hidden;
-	padding-top: 17.5px;
+	padding: 0;
+	.credits {
+		p {
+			margin: 0;
+			min-height: 110px;
+			padding-top: 32px;
+		} & :nth-child(odd):not(a) {
+			background-color: #111;
+			color: #fff;
+			font-weight: normal;
+		}
+	}
 	#addy {
-		color: #111;
+		color: #fff;
 		overflow: hidden;
 		.org {
-			background-color: #fff;
-			font-weight: bold;
+			background-color: #111;
 			min-height: 110px;
 			padding-top: 42.5px;
 		} .adr {
-			background-color: #111;
-			color: #fff;
+			background-color: #fff;
+			color: #111;
+			font-weight: bold;
 			min-height: 110px;
 			padding-top: 42.5px;
 		} .hrs {
-			background-color: #fff;
+			background-color: #111;
 			font-weight: bold;
 			min-height: 110px;
 			padding-top: 42.5px;
@@ -203,6 +236,24 @@ a {
 			word-wrap: normal;
 		}
 	}
+	#testimonials {
+		background-color: #fff;
+		color: #111;
+		blockquote {
+			border: none;
+			font-size: inherit;
+			font-weight: bold;
+			margin-bottom: 0;
+			min-height: 110px;
+			padding-top: 42.5px;
+			padding-right: 125px;
+		}
+		& :nth-child(even) {
+			background-color: #111;
+			color: #fff;
+			font-weight: normal;
+		}
+	}
 }
 
 // Yellp Styles
@@ -212,20 +263,15 @@ a {
 }
 
 #canvasDiv {
-	// Fix weird layout bug (maybe due to dynamically adding canvas?)
-	max-height: 330px;
-	margin-top: -1px;
 	canvas {
 		@include border(12px, $cyan, $yellow);
 	}
 }
 
-.canvas-header {
-}
-
 #yellps {
 	.latest-yellps {
 		background-color: #111;
+		max-width: 330px;
 		min-height: 330px;
 		padding: 0;
 		&::before {
@@ -242,12 +288,16 @@ a {
 	}
 	.yellp-img {
 		@include border(12px, $magenta, $cyan);
+		max-width: 330px;
 		padding-left: 0;
 		padding-right: 0;
 		img {
 			height: 306px;
 			width: 306px;
 		}
+	}
+	div:nth-child(4n):not(.spacer) { // every other yellp-img
+		@include border(12px, $cyan, $magenta);
 	}
 	.more-yellps {
 		@include egg(328px, 300px, #111);
@@ -347,7 +397,7 @@ a {
 }
 
 .cocktail {
-	background-color: #111;
+	background-color: $magenta;
 }
 
 .cocktail-header {
