--- a/public/styles/site/_mobile.scss
+++ b/public/styles/site/_mobile.scss
@@ -1,32 +1,238 @@
-// screen-md and larger
-@media screen and (min-width: 990px) {
+// screen-lg
+@media screen and (min-width: 1160px) {
 	#mainNav {
-		position: fixed;
-		right: 0;
-		top: 0;
-	}
-	.navbar-nav > li > a {
-		padding-top: 42.5px;
+		width: 100%;
+		.navbar-nav {
+			width: 100%;
+			& > li {
+				padding-left: 0;
+				padding-right: 0;
+				width: 33.33333%;
+			}
+		}
 	}
 	#header {
+		margin-bottom: 1px;
+		margin-top: -1px; // weird layout fixes?
 		max-height: 330px;
+		overflow: hidden;
+	}
+	#pplogo {
+		max-height: 220px;
+		max-width: 318.36px;
+		padding: 7.5px;
 	}
 	#ppguy {
-		min-height: 330px;
+		max-height: 220px;
+		max-width: 449.3px;
+	}
+	.canvas-header h2 {
+		margin-bottom: 0;
+	}
+	#canvasDiv {
+		margin-left: 660px;
+		height: 330px;
+		width: 330px;
 	}
 	#addy {
 		position: fixed;
 		right: 0;
-		top: 330px;
+		top: 0;
 		.org, .adr, .hrs {
 			max-width: 330px;
 		}
 	}
-}
-
-//screen-sm
-@media screen and (min-width: 660px) and (max-width: 989px) {
-	#ppguy {
-		max-height: 162px;
+	#testimonials {
+		border-bottom: 110px solid #111;
+		max-width: 330px;
+		position: fixed;
+		right: 0;
+		top: 330px;
+		figure {
+			margin: 0;
+			max-width: 330px;
+			overflow: hidden;
+			padding: 0;
+		}
+	}
+	.credits p:nth-of-type(2) { // center align text in center credits col
+		text-align: center;
 	}
 }
+
+//screen-md
+@media screen and (min-width: 787px) and (max-width: 1159px) {
+	// Header
+	#mainNav {
+		width: 100%;
+		.navbar-nav {
+			width: 100%;
+			& > li {
+				padding-left: 0;
+				padding-right: 0;
+				width: 33.33333%;
+			}
+		}
+	}
+	.navbar-nav {
+		width: 660px;
+		& > li {
+			display: inline-block;
+			max-width: 220px;
+		}
+	}
+	#header {
+		margin-top: -1px; // weird layout fix?
+		max-height: 330px;
+		overflow: hidden;
+	}
+	#pplogo {
+		max-height: 220px;
+		padding: 7.5px;
+	}
+	#ppguy {
+		max-height: 220px;
+		max-width: 449.3px;
+	}
+	// Body
+	#canvasDiv {
+		max-width: 660px;
+		max-height: 660px;
+	}
+	.canvas-header {
+		max-width: 330px;
+		h2 { margin-bottom: 0; }
+	}
+	.canvas-footer {
+	}
+	#yellps {
+		// hide first spacer for layout
+		div:first-of-type { 
+			display: none;
+			visibility: hidden;
+		}
+	}
+	#menu, #eventsHeader, #events {
+		.page-title {
+			background-repeat: repeat-x;
+			max-width: 660px;
+			text-align: center;
+		}
+		.spacer {
+			display: none;
+			visibility: hidden;
+		}
+	}
+	// Footer
+	#addy {
+		position: fixed;
+		right: 0;
+		top: 0;
+	}
+	#testimonials {
+		border-bottom: 110px solid #111;
+		position: fixed;
+		right: 0;
+		top: 330px;
+		figure {
+			margin: 0;
+			overflow: hidden;
+			padding: 0;
+		}
+	}
+	.credits p {
+		margin-bottom: 0;
+		min-height: 110px;
+	}
+
+}
+
+// screen-sm
+@media screen and (max-width: 786px) {
+	// Header
+	#mainNav .nav {
+		margin: 0;
+		width: 100%;
+			li {
+			background-color: #111;
+			color: #fff;
+			font-size: .75em;
+			padding: 0;
+			&:nth-child(even) {
+				background-color: #fff;
+				color: #111;
+				font-weight: bold;
+			}
+		}
+	}
+	#logo {
+		min-height: 220px;
+		#pplogo {
+			padding-top: 12.5px; 
+		}
+	}
+	// Body
+	.canvas-header h2 {
+		margin-bottom: 0;
+	}
+	.canvas-footer {
+		padding-bottom: 12px;
+	}
+	#canvasDiv {
+		height: 660px;
+		width: 330px;
+	}
+	.spacer {
+		display: none;
+		visibility: hidden;
+	}
+	#menu {
+		.page-title {
+			max-width: 660px;
+			text-align: center;
+		}
+		.cocktails {
+			margin-bottom: 0;
+		}
+		.cocktail {
+			padding: 16px;
+		}
+		.cocktail-header {
+			margin-top: 0;
+		}
+		.cocktail-quote {
+			margin-bottom: 0;
+		}
+	}
+	#eventsHeader, #events {
+		.page-title {
+			background-repeat: repeat-x;
+			max-width: 660px;
+			text-align: center;
+		}
+		.spacer {
+			display: none;
+			visibility: hidden;
+		}
+	}
+	// Footer
+	#footer {
+		padding-left: 0;
+		padding-right: 0;
+		.container {
+			padding-left: 0;
+			padding-right: 0;
+		}
+		.credits p {
+			margin: 0;
+			padding-left: 15px;
+			padding-right: 15px;
+			text-align: center;
+		}
+		.modal-body {
+			font-size: 12px;
+		}
+	}
+}
+
+
