--- a/templates/views/layouts/default.html
+++ b/templates/views/layouts/default.html
@@ -32,33 +32,27 @@
 			{# Customise your site"s navigation by changing the navLinks Array in ./routes/middleware.js
 			   ... or completely change this header to suit your design. #}
 			<div role="navigation" class="navbar container">
-				<!-- <div class="container"> -->
-				<a id="logo" href="/">
-					<img id="pplogo" class="col-md-2 col-sm-3 col-xs-6" src="/images/ponpon-logo.png" alt="Pon Pon bar">
-					<img id="ppguy" class="col-md-4 col-sm-3 col-xs-6" src="/images/pon-guy-lo.gif" alt="Pon Pon Bar illustration">
-				</a>
-				<!-- </div> -->
 				<div id="mainNav" class="col-md-2 col-xs-6">
 					<ul class="nav navbar-nav">
 						{% for link in navLinks %}
-							<li class="{{ 'active' if link.key == section else '' }}">
+							<li class="{{ 'active' if link.key == section else '' }} col-xs-2">
 								<a href="{{ link.href }}">{{ link.label }}</a>
 							</li>
 						{% endfor %}
-						<li class="{{ 'active' if link.key == section else '' }}">
+						<li class="{{ 'active' if link.key == section else '' }} col-xs-2">
 							<a href="#contact" data-toggle="modal" data-target=".contact-modal">Contact</a>
 						</li>
 					</ul>
 				</div>
+				<a id="logo" class="col-xs-2 col-sm-3 col-md-2" href="/">
+					<img id="pplogo" class="col-xs-6" src="/images/ponpon-logo.png" alt="Pon Pon bar">
+				</a>
+				<img id="ppguy" class="col-xs-4 col-sm-3" src="/images/pon-guy-lo.gif" alt="Pon Pon Bar illustration">
 			</div>
 		</div>
 
 		{# BODY #}
 		<div id="body">
-			{# NOTE:
-			   There is no .container wrapping class around body blocks to allow more flexibility in design.
-			   Remember to include it in your templates when you override the intro and content blocks! #}
-
 			{# The Intro block appears above flash messages (used for temporary information display) #}
 			{% block intro %}{% endblock %}
 
@@ -73,26 +67,44 @@
 		{# FOOTER #}
 		<div id="footer" class="container">
 			<div class= "container">
-				<div class="row credits">
-					<p class="col-sm-2 col-xs-6">&copy; forever + 12 {{ title|default("Pon Pon Bar") }}</p>
-					<p class="col-sm-2 col-xs-6">Find us on <a href="https://duckduckgo.com/?q=%22yellp%22&norw=1&t=ffab&ia=web" target="_blank">Yellp</a></p>
-					<p class="design col-sm-2 col-xs-6">Design by <a href="https://www.instagram.com/realgooddesigner/" target="_blank" rel="nofollow">@realgooddesigner</a>.</p>
-				</div>
 				<div id="addy" class="vcard">
-					<div class="org marquee3k" data-speed="0.75" data-pausable="true">
+					<div class="org marquee3k" data-speed="0.75" data-reverse="true" data-pausable="true">
 						<span class="ponpon">Pon Pon Bar&nbsp;</span>
 					</div>
 					<a class="email" href="mailto:ponponbarbar@gmail.com">ponponbarbar[at]gmail[dot]com</a>
-					<div class="adr marquee3k" data-speed="0.75" data-reverse="true" data-pausable="true">
+					<div class="adr marquee3k" data-speed="0.75" data-pausable="true">
 						<div class="street-address">2528 Walnut St.&nbsp;</div>
 						<span class="locality">Denver</span>
 						<span class="region">CO</span>
 						<span class="postal-code">80205</span>
 						<span class="country-name">USA</span>
 					</div>
-						<div id="hours" class="marquee3k" data-speed="0.75" data-pausable="true">
+						<div id="hours" class="marquee3k" data-speed="0.75" data-reverse="true" data-pausable="true">
 							<span class="hrs">4PM to ???&nbsp;</span>
 						</div>
+				</div>
+				<div id="testimonials">
+					<figure class="marquee3k" data-speed="1.125" data-pausable="true">
+					    <blockquote>
+					        “Pon Pon is where I was when I first heard Beyoncé's Lemonade.” <cite>— Bubbles Peterson</cite>
+					    </blockquote>
+					</figure>
+					<figure class="marquee3k" data-speed="1.075" data-pausable="true">
+					    <blockquote>
+					        “When I tagged the bathroom, I immediately felt a string of complex emotions, tinged with guilt…” 
+					        <cite>— Crimini Blush (Graffiti Artist)</cite>
+					    </blockquote>
+					</figure>
+					<figure class="marquee3k" data-speed="1.125" data-pausable="true">
+					    <blockquote>
+					        “I DJed there. The atmosphere elevated me to a sphere marked by airiness and soft currents of cloud mist.” <cite>— Meggles McMeehan (Little Kicks)</cite>
+					    </blockquote>
+					</figure>
+				</div>
+				<div class="row credits">
+					<p class="col-sm-2 col-xs-6">&copy; forever + 12 {{ title|default("Pon Pon Bar") }}</p>
+					<p class="col-sm-2 col-xs-6">Find us on <a href="https://duckduckgo.com/?q=%22yellp%22&norw=1&t=ffab&ia=web" target="_blank">Yellp</a></p>
+					<p class="design col-sm-2 col-xs-6">Design by <a href="https://www.instagram.com/realgooddesigner/" target="_blank" rel="nofollow">@realgooddesigner</a>.</p>
 				</div>
 				<div class="modal contact-modal" tabindex="-1" role="dialog">
 					  <div class="modal-dialog modal-md" role="document">
@@ -104,10 +116,10 @@
 		      					<p><s>ponbar@ponbar.com</s></p>
 		      					<p><s>paul@garçon.com</s></p>
 		      					<p><s>beef@chicken.com</s></p>
+		      					<p><a id="modalEmail" href="">ponponbarbar|@|gmail[dot]com</a></p>
 		      					<p><s>super@ponponbar.com</s></p>
 								<p><s>ponpon@ponpon.com</s></p>
 								<p><s>barbar@ponpon.com</s></p>
-								<p><a id="modalEmail" href="">ponponbarbar|@|gmail[dot]com</a></p>
 					    	</div>
 					    </div>
 					  </div>
