Adding image delete button styles
Somehow got lost on initial commit?

--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -258,6 +258,12 @@ a {
 		position: absolute;
 	}
 }
+.yellp-delete {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+}
 
 // Blog
 .post-head-1 {
