--- a/templates/views/index.html
+++ b/templates/views/index.html
@@ -4,7 +4,7 @@
 <div class="container canvas-wrapper">
     <div class="canvas-header col-md-2 col-xs-6">
         <h2>Yellp at Pon Pon!</h2>
-        <p>Draw me a review (minty fresh) in the box<span class="yellp-arrow"> to the →</span> and add it to the wall.</p>
+        <p>Draw us a review in the box<span class="yellp-arrow"> to the right →</span> and hit save to add it to our wall.</p>
         <button id="saveCanvas" class="btn btn-default btn-lg" type="button">Save</button>
         <button id="clearCanvas" class="btn btn-default btn-lg" type="button">Clear</button>
     </div>
