--- a/templates/views/layouts/default.html
+++ b/templates/views/layouts/default.html
@@ -20,6 +20,7 @@
 
 		{# Add any other template-specific HEAD tags by extending the head block #}
 		{% block head %}{% endblock %}
+
 	</head>
 	<body>
 
@@ -77,48 +78,50 @@
 						<span class="country-name">USA</span>
 					</div>
 						<div id="hours" class="marquee3k" data-speed="0.75" data-reverse="true" data-pausable="true">
-							<span class="hrs">4PM to ???&nbsp;</span>
+							<span class="hrs">Open Wed.-Sat. 5-11PM&nbsp;</span>
 						</div>
 				</div>
 				<div id="testimonials">
 					<figure class="marquee3k" data-speed="1.125" data-pausable="true">
-					    <blockquote>
-					        “Pon Pon is where I was when I first heard Beyoncé's Lemonade.” <cite>— Bubbles Peterson</cite>
-					    </blockquote>
+						<blockquote>
+							“Pon Pon is where I was when I first heard Beyoncé's Lemonade.” <cite>— Bubbles Peterson</cite>
+						</blockquote>
 					</figure>
 					<figure class="marquee3k" data-speed="1.075" data-pausable="true">
-					    <blockquote>
-					        “When I tagged the bathroom, I immediately felt a string of complex emotions, tinged with guilt…” 
-					        <cite>— Crimini Blush (Graffiti Artist)</cite>
-					    </blockquote>
+						<blockquote>
+							“When I tagged the bathroom, I immediately felt a string of complex emotions, tinged with guilt…” 
+							<cite>— Crimini Blush (Graffiti Artist)</cite>
+						</blockquote>
 					</figure>
 					<figure class="marquee3k" data-speed="1.125" data-pausable="true">
-					    <blockquote>
-					        “I DJed there. The atmosphere elevated me to a sphere marked by airiness and soft currents of cloud mist.” <cite>— Meggles McMeehan (Little Kicks)</cite>
-					    </blockquote>
+						<blockquote>
+							“I DJed there. The atmosphere elevated me to a sphere marked by airiness and soft currents of cloud mist.” <cite>— Meggles McMeehan (Little Kicks)</cite>
+						</blockquote>
 					</figure>
 				</div>
 				<div class="row credits">
-					<p class="col-sm-2 col-xs-6">&copy; forever + 12 {{ title|default("Pon Pon Bar") }}</p>
-					<p class="col-sm-2 col-xs-6">Find us on <a href="https://duckduckgo.com/?q=%22yellp%22&norw=1&t=ffab&ia=web" target="_blank">Yellp</a></p>
-					<p class="design col-sm-2 col-xs-6">Design by <a href="https://www.instagram.com/realgooddesigner/" target="_blank" rel="nofollow">@realgooddesigner</a>.</p>
+					<p class="col-sm-2 col-xs-6">&copy; <span id="year"><!--JS outputs current year --></span> Pon Pon Bar.</p>
+					<p class="col-sm-2 col-xs-6"><a href="#top">Up to top</a>. Find us on <a href="https://duckduckgo.com/?q=%22yellp%22&norw=1&t=ffab&ia=web" target="_blank">Yellp</a>.</p>
+					<p class="filler col-sm-2 col-xs-6">Site by <a href="https://trev.click" rel="dofollow" target="_blank">trev</a>.</p>
 				</div>
 				<div class="modal contact-modal" tabindex="-1" role="dialog">
 					  <div class="modal-dialog modal-md" role="document">
-					    <div class="modal-content">
-					    	<div class="modal-header">
-					    		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					    	</div>
-					    	<div class="modal-body">
-		      					<p><s>ponbar@ponbar.com</s></p>
-		      					<p><s>paul@garçon.com</s></p>
-		      					<p><s>beef@chicken.com</s></p>
-		      					<p><a id="modalEmail" href="">ponponbarbar|@|gmail[dot]com</a></p>
-		      					<p><s>super@ponponbar.com</s></p>
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							</div>
+							<div class="modal-body">
+								<h3>COVID-19 Update:</h3>
+								<p>Pon Pon Bar is open Wednesday-Saturday 5-11PM at 2528 Walnut St. in Denver, CO.</p>
+								<p><a id="modalEmail" href="">ponponbarbar|@|gmail[dot]com</a></p>
+								<p><s>ponbar@ponbar.com</s></p>
+								<p><s>paul@garçon.com</s></p>
+								<p><s>beef@chicken.com</s></p>
+								<p><s>super@ponponbar.com</s></p>
 								<p><s>ponpon@ponpon.com</s></p>
 								<p><s>barbar@ponpon.com</s></p>
-					    	</div>
-					    </div>
+							</div>
+						</div>
 					  </div>
 				</div>
 				{% if user %}
