--- a/templates/views/layouts/default.html
+++ b/templates/views/layouts/default.html
@@ -78,7 +78,7 @@
 						<span class="country-name">USA</span>
 					</div>
 						<div id="hours" class="marquee3k" data-speed="0.75" data-reverse="true" data-pausable="true">
-							<span class="hrs">Open Wed.-Sat. 5-11PM&nbsp;</span>
+							<span class="hrs">Closed due to pandemic, will return shortly&hellip;&nbsp;</span>
 						</div>
 				</div>
 				<div id="testimonials">
@@ -112,7 +112,7 @@
 							</div>
 							<div class="modal-body">
 								<h3>COVID-19 Update:</h3>
-								<p>Pon Pon Bar is open Wednesday-Saturday 5-11PM at 2528 Walnut St. in Denver, CO.</p>
+								<p>Pon Pon Bar is Closed due to pandemic but will return shortly at 2528 Walnut St. in Denver, CO.</p>
 								<p><a id="modalEmail" href="">ponponbarbar|@|gmail[dot]com</a></p>
 								<p><s>ponbar@ponbar.com</s></p>
 								<p><s>paul@garçon.com</s></p>
