removing covid update

--- a/templates/views/layouts/default.html
+++ b/templates/views/layouts/default.html
@@ -111,13 +111,10 @@
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 							</div>
 							<div class="modal-body">
-								<h3>COVID-19 Update:</h3>
-								<p>Pon Pon Bar is Closed due to pandemic but will return shortly at 2528 Walnut St. in Denver, CO.</p>
+								<h3>Contact</h3>
 								<p><a id="modalEmail" href="">ponponbarbar|@|gmail[dot]com</a></p>
 								<p><s>ponbar@ponbar.com</s></p>
 								<p><s>paul@garçon.com</s></p>
-								<p><s>beef@chicken.com</s></p>
-								<p><s>super@ponponbar.com</s></p>
 								<p><s>ponpon@ponpon.com</s></p>
 								<p><s>barbar@ponpon.com</s></p>
 							</div>
