--- a/templates/views/layouts/default.html
+++ b/templates/views/layouts/default.html
@@ -78,7 +78,7 @@
 						<span class="country-name">USA</span>
 					</div>
 						<div id="hours" class="marquee3k" data-speed="0.75" data-reverse="true" data-pausable="true">
-							<span class="hrs">Wednesday-Sunday 4pm to close&nbsp;</span>
+							<span class="hrs">Tuesday-Sunday 4pm-2am&nbsp;</span>
 						</div>
 				</div>
 				<div id="testimonials">
