--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -436,7 +436,11 @@ a {
 	border-style: solid;
 	border-width: 0 3px;
 	padding: 17.5px 16.75px 0;
-	p { margin: 0; }
+	p { 
+		margin: 0;
+		transform: scaleX(1);
+		width: 100%;
+	}
 }
 
 .drink-type {
