--- a/templates/views/index.html
+++ b/templates/views/index.html
@@ -3,35 +3,40 @@
 {% block content %}
 <div class="container canvas-wrapper">
     <div class="canvas-header col-md-2 col-xs-6">
-        <h2>Yellp at Pon Pon!</h2>
-        <p>Draw us a review in the box<span class="yellp-arrow"> to the right →</span> and hit save to add it to our wall.</p>
-        <button id="saveCanvas" class="btn btn-default btn-lg" type="button">Save</button>
-        <button id="clearCanvas" class="btn btn-default btn-lg" type="button">Clear</button>
+        <h2>Pon Pon</h2>
+        <p>Now open Tuesday to Sunday, 4PM to 2AM. Here's a pic<span class="yellp-arrow"> →</span></p>
+        <!--button id="saveCanvas" class="btn btn-default btn-lg" type="button">Save</button>
+        <button id="clearCanvas" class="btn btn-default btn-lg" type="button">Clear</button-->
     </div>
-    <div id="canvasDiv"></div>
+    <!--div id="canvasDiv"></div-->
+    <div class="placeholder">
+        <div class="yellp-img col-md-2 col-xs-6">
+          <img src="/uploads/images/pon-pon-bar-interior-square-web.jpg" />
+        </div>
+    </div>
     <div id="yellps">
         {% if not index %}
-          <h2 class="text-center">No one Yellped at us!</h2>
+          <h2 class="text-center">No pics!</h2>
         {% else %}
           <div class="spacer col-md-2 col-xs-6">
           </div>
           <div class="latest-yellps col-md-2 col-xs-6">
-            <h2>Latest Yellps</h2>
+            <h2>Latest Pics</h2>
           </div>
         {% set length = index.length %}
         {% for i in range((length - 5), length) %}
           <div class="spacer col-md-2 col-xs-6">
           </div>
           <div class="yellp-img col-md-2 col-xs-6">
-            <img src="/uploads/images/{{index[i].image.filename}}" />
+            <img src="/uploads/images/pon-pon-bar-interior-square-web.jpg" />
           </div>
         {% endfor %}
         {% endif %}
         <div class="spacer col-md-2 col-xs-6">
         </div>
         <div class="more-yellps col-md-2 col-xs-6">
-          <h2>More Yellps</h2>
-          <a href="/archive" target="_blank">All the yellps &rarr;</a>
+          <h2>More Pics</h2>
+          <a href="/archive" target="_blank">All the pics &rarr;</a>
         </div>
     </div>
 </div>
