--- a/templates/views/layouts/default.html
+++ b/templates/views/layouts/default.html
@@ -102,7 +102,7 @@
 				<div class="row credits">
 					<p class="col-sm-2 col-xs-6">&copy; <span id="year"><!--JS outputs current year --></span> Pon Pon Bar.</p>
 					<p class="col-sm-2 col-xs-6"><a href="#top">Up to top</a>. Find us on <a href="https://duckduckgo.com/?q=%22yellp%22&norw=1&t=ffab&ia=web" target="_blank">Yellp</a>.</p>
-					<p class="filler col-sm-2 col-xs-6">Site by <a href="https://trev.click" rel="dofollow" target="_blank">trev</a>.</p>
+					<p class="filler col-sm-2 col-xs-6">Site by <a href="https://trevorjahner.com" rel="dofollow" target="_blank">trev</a>.</p>
 				</div>
 				<div class="modal contact-modal" tabindex="-1" role="dialog">
 					  <div class="modal-dialog modal-md" role="document">
