--- a/templates/views/index.html
+++ b/templates/views/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container canvas-wrapper">
     <div class="canvas-header col-md-2 col-xs-6">
-        <h2>Pon Pon</h2>
-        <p>Now open Tuesday to Sunday, 4PM to 2AM. Here's a pic<span class="yellp-arrow"> →</span></p>
+        <h2>Pon Pon Bar</h2>
+        <p>Now open Tuesday to Sunday from 4PM to 2AM. Located between North Broadway and 26th on Walnut street. Here's a pic<span class="yellp-arrow"> →</span></p>
         <!--button id="saveCanvas" class="btn btn-default btn-lg" type="button">Save</button>
         <button id="clearCanvas" class="btn btn-default btn-lg" type="button">Clear</button-->
     </div>
@@ -35,7 +35,7 @@
         <div class="spacer col-md-2 col-xs-6">
         </div>
         <div class="more-yellps col-md-2 col-xs-6">
-          <h2>More Pics</h2>
+          <h2>More<br/>Pics</h2>
           <a href="/archive" target="_blank">All the pics &rarr;</a>
         </div>
     </div>
